--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -26,6 +26,7 @@
   padding: 0;
   box-sizing: border-box;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
